--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,17 @@ canvas {
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 60%; /* Could be more or less, depending on screen size */
+
+  }
+
+  ul {
+    overflow-y: scroll;
+    overflow-wrap:break-word;
+  }
+
+  pre {
+    margin-left: 0;
   }
   
   /* The Close Button */
